--- a/util/pom.xml
+++ b/util/pom.xml
@@ -12,9 +12,10 @@
 			<version>3.0-alpha-1</version>
 		</dependency>
 		<dependency>
-			<groupId>it.sauronsoftware.base64</groupId>
-			<artifactId>base64</artifactId>
-			<version>1.3.1</version>
+			<groupId>commons-codec</groupId>
+			<artifactId>commons-codec</artifactId>
+			<version>1.10</version>
 		</dependency>
 	</dependencies>
+
 </project>
