--- a/filemanager/pom.xml
+++ b/filemanager/pom.xml
@@ -17,5 +17,11 @@
 			<version>4.11</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.16.6</version>
+			<scope>provided</scope>
+		</dependency>
 	</dependencies>
 </project>
