--- a/filemanager/pom.xml
+++ b/filemanager/pom.xml
@@ -23,5 +23,10 @@
 			<version>1.16.6</version>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>1.7.12</version>
+		</dependency>
 	</dependencies>
 </project>
